# openhome-ambient-announcer

./: .gitignore  README.md  pyproject.toml  run_live.py  run_poc.py
announcer/: __init__.py  app.py  mock_state.py  templates.py
docs/: design.md
openhome_org_voice_core/: __init__.py  bridge.py  envelope.py  poller.py  speaker.py
tests/: test_app.py  test_bridge.py  test_poller.py  test_templates.py
